# htool_python

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: CI.yml  publish.yml
cmake/: formatting.cmake
cmake_modules/: FindMPI4PY.cmake
example/: cluster.py  create_geometry.py  ddm_solver.py  define_custom_dense_blocks_generator.py  define_custom_generators.py  define_custom_local_operator.py  define_custom_low_rank_generator.py  define_generators.py  partition_example.py  smallest_example.py  solver_scipy.py  use_block_jacobi_solver.py  use_block_jacobi_solver_with_default_build.py  use_block_jacobi_solver_with_no_default_build.py  use_cluster.py  use_cluster_with_given_partition.py  use_custom_dense_block_generator.py  use_custom_local_operator.py  use_custom_low_rank_approximation.py  use_ddm_solver.py  use_default_build.py  use_distributed_operator.py  use_hmatrix.py  use_hmatrix_compression.py  use_local_build.py  use_local_hmatrix_compression.py  use_no_default_build.py
example/advanced/: define_custom_local_operator.py  define_custom_low_rank_generator.py  use_cluster_with_given_partition.py  use_custom_dense_block_generator.py  use_custom_global_to_local_operator.py  use_custom_local_to_local_operator.py  use_custom_low_rank_approximation.py  use_local_hmatrix_compression.py
src/htool/: cluster.hpp  ddm_solver.hpp  dense_blocks_generator.hpp  hmatrix.hpp  lrmat_generator.hpp  main.cpp  matrix.hpp  misc.hpp  off_diagonal_approximation.hpp  wrapper_mpi.hpp
src/htool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/htool/clustering/: cluster_builder.hpp  cluster_node.hpp  cluster_tree_builder.hpp  utility.hpp
src/htool/clustering/implementation/: direction_computation.hpp  partitioning.hpp  splitting.hpp
src/htool/clustering/interface/: direction_computation.hpp  splitting.hpp  virtual_partitioning.hpp
src/htool/distributed_operator/: distributed_operator.hpp  utility.hpp
src/htool/distributed_operator/implementation/: partition_from_cluster.hpp
src/htool/distributed_operator/interface/: partition.hpp
src/htool/hmatrix/: execution_policies.hpp  hmatrix.hpp  hmatrix_builder.hpp  hmatrix_tree_builder.hpp  lrmat.hpp
src/htool/hmatrix/interfaces/: virtual_dense_blocks_generator.hpp  virtual_generator.hpp  virtual_low_rank_generator.hpp
src/htool/local_operator/: local_dense_operator.hpp  local_hmatrix.hpp  local_operator.hpp  local_renumbering.hpp  virtual_local_operator.hpp  virtual_local_to_local_operator.hpp
src/htool/matplotlib/: cluster.hpp  hmatrix.hpp
src/htool/misc/: logger.hpp  testing.hpp  utility.hpp  wrapper_mpi.hpp
src/htool/solver/: solver.hpp  utility.hpp
src/htool/solver/geneo/: coarse_operator_builder.hpp  coarse_space_builder.hpp  coarse_space_dense_builder.hpp
src/htool/solver/interfaces/: virtual_coarse_operator_builder.hpp  virtual_coarse_space_builder.hpp
tests/: conftest.py  test_cluster.py  test_complex_hmatrix.py  test_ddm_solver.py  test_distributed_operator.py  test_hmatrix.py  test_imatrix.py  test_logger.py
