[project]
name = "Htool-DDM"
version = "1.0.1rc1"
authors = [{ name = "Pierre Marchand", email = "test@test.com" }]
description = "CLI utility to automate asciinema"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS",
    "Operating System :: Unix",
]
keywords = [
    "kernel approximation",
    "hierarchical matrix",
    "domain decomposition method",
]
dependencies = ["mpi4py>=4.0.0", "numpy"]


[project.optional-dependencies]
dev = ["ruff", "matplotlib>=3.0.0", "pytest", "scipy", "pybind11-stubgen"]


[project.urls]
"Homepage" = "https://github.com/htool-ddm/htool_python"
"Bug Tracker" = "https://github.com/htool-ddm/htool_python/issues"

[tool.ruff]
line-length = 88
indent-width = 4
exclude = ["lib", "cmake-format.py"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["Htool"]

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "cmake",
    "mpi4py",
    "numpy",
    "pybind11-stubgen",
]
build-backend = "setuptools.build_meta"
